# LGMonitorController

./: .gitignore  .pre-commit-config.yaml  console.py  gui.py  gui.pyw  pyproject.toml
lib/: ultragear.py
samples/: samples.py
